# sonarqube-py

./: .gitignore  .sonarqube.yml  .travis.yml  FEATURES.md  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: pullrequestchecks.yml
examples/: config.py  measures.py  projects.py
sonarqube/: __init__.py  api.py  cli.py  community.py  examples.py  exceptions.py
tests/: test_api.py  test_community.py
