[tool.poetry]
name = "sonarqube-py"
version = "0.5.3"
description = "A python wrapper for the SonarQube web API"
license = "MIT"
authors = ["Pat <itchyknee@gmail.com>"]
repository = "https://github.com/yantantether/sonarqube-py"
keywords = ["sonarqube"]
packages = [
    { include = "sonarqube" }
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.27.1"
click = "^8.0.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
httpretty = "^1.1.4"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
